--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "react-multi-carousel": "^2.8.5",
+    "react-share": "^5.1.0",
     "sharp": "^0.33.4",
     "yup": "^1.4.0"
   },
