--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.52.0",
     "react-multi-carousel": "^2.8.5",
     "react-share": "^5.1.0",
