--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@builder.io/react": "^3.2.8",
     "@builder.io/sdk": "^2.2.4",
     "@hookform/resolvers": "^3.6.0",
+    "@vercel/analytics": "^1.3.1",
     "classnames": "^2.5.1",
     "gsap": "^3.12.5",
     "next": "^14.2.4",
